--- a/OITDemo/OITDemo.css
+++ b/OITDemo/OITDemo.css
@@ -26,16 +26,8 @@ body {
     font-family: sans-serif;
 }
 
-.loadingIndicator {
-    display: block;
+#toolbar {
+    margin: 5px;
+    padding: 2px 5px;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -33px;
-    margin-left: -33px;
-    width: 66px;
-    height: 66px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-image: url(Images/ajax-loader.gif);
 }
