--- a/OITDemo/OITDemo.css
+++ b/OITDemo/OITDemo.css
@@ -26,8 +26,60 @@ body {
     font-family: sans-serif;
 }
 
+.loadingIndicator {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -33px;
+    margin-left: -33px;
+    width: 66px;
+    height: 66px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url(Images/ajax-loader.gif);
+}
+
 #toolbar {
     margin: 5px;
     padding: 2px 5px;
     position: absolute;
+}
+
+.cesium-button {
+    -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+    box-shadow:inset 0px 1px 0px 0px #ffffff;
+
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #dedede));
+    background:-moz-linear-gradient(top, #f9f9f9 5%, #dedede 100%);
+    background:-webkit-linear-gradient(top, #f9f9f9 5%, #dedede 100%);
+    background:-o-linear-gradient(top, #f9f9f9 5%, #dedede 100%);
+    background:-ms-linear-gradient(top, #f9f9f9 5%, #dedede 100%);
+    background:linear-gradient(to bottom, #f9f9f9 5%, #dedede 100%);
+
+    border-radius:3px;
+    border:1px solid #dcdcdc;
+    display:inline-block;
+    padding:5px 10px;
+    margin:3px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #ffffff;
+}
+
+.cesium-button:hover {
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dedede), color-stop(1, #f9f9f9));
+    background:-moz-linear-gradient(top, #dedede 5%, #f9f9f9 100%);
+    background:-webkit-linear-gradient(top, #dedede 5%, #f9f9f9 100%);
+    background:-o-linear-gradient(top, #dedede 5%, #f9f9f9 100%);
+    background:-ms-linear-gradient(top, #dedede 5%, #f9f9f9 100%);
+    background:linear-gradient(to bottom, #dedede 5%, #f9f9f9 100%);
+}
+
+.cesium-button:active {
+    -webkit-transform: translateY(1px);
+    -moz-transform: translateY(1px);
+    -ms-transform: translateY(1px);
+    -o-transform: translateY(1px);
+    transform: translateY(1px);
 }
